; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/tominabox1/extr_tominabox1.c_layer_state_set_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/tominabox1/extr_tominabox1.c_layer_state_set_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @layer_state_set_user(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @update_tri_layer_state(i32 %3, i32 129, i32 128, i32 130)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @biton32(i32 %5)
  switch i32 %6, label %10 [
    i32 129, label %7
    i32 128, label %8
    i32 130, label %9
  ]

7:                                                ; preds = %1
  br label %11

8:                                                ; preds = %1
  br label %11

9:                                                ; preds = %1
  br label %11

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %10, %9, %8, %7
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @update_tri_layer_state(i32, i32, i32, i32) #1

declare dso_local i32 @biton32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
